--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,3 +1,32 @@
+body {
+    overflow-x: hidden;
+    background-color: #181818;
+  --sb-track-color: #232E33;
+  --sb-thumb-color: #26abd8;
+  --sb-size: 8px;
+}
+
+body::-webkit-scrollbar {
+    width: var(--sb-size);
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 3px;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 3px;
+  }
+  
+  @supports not selector(::-webkit-scrollbar) {
+    body {
+        scrollbar-color: var(--sb-thumb-color)
+                       var(--sb-track-color);
+    }
+  }
+
 /*=============================================================Media Content==========================================================================*/
 
 @media screen and (max-width: 1440px) {
